// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render when Service Mesh is active 1`] = `""`;

exports[`should render correctly 1`] = `
<FormFieldset
  id="fieldset-AuthenticationSettings"
>
  <FormLegend>
    Authentication Settings
  </FormLegend>
  <FormCollection
    ItemComponent={[Function]}
    collection={
      Array [
        undefined,
      ]
    }
    legend="API KEY (USER_KEY) BASICS"
  />
</FormFieldset>
`;

exports[`should render only OIDC when Service Mesh is active and Oidc method is selected 1`] = `
<FormFieldset
  id="fieldset-AuthenticationSettings"
>
  <FormLegend>
    Authentication Settings
  </FormLegend>
  <OidcFieldset
    isServiceMesh={true}
  />
</FormFieldset>
`;
